--- a/azure/00_azure_class_setup.yml
+++ b/azure/00_azure_class_setup.yml
@@ -51,7 +51,7 @@
             public_ip_address_name: "{{ item }}_public_ip"
             primary: true
       loop:
-        compute
+        "{{ compute }}"
       async: 1000
       poll: 0
       register: create_nic
@@ -83,7 +83,7 @@
         vm_size: "Standard_D4s_v3"
         network_interfaces: "{{ item }}_nic01"
       loop:
-        compute
+        "{{ compute }}"
       async: 1000
       poll: 0
       register: create_vm
